# Research_Copilot

./: .clinerules  .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  QUICKSTART.md  README.md  RESEARCHER_GUIDE.md  TODO.md  docker-compose.yml  fix_cli.py  fix_install.py  fix_rules.py  fix_server_imports.py  fix_start.py  fix_start2.py  hide_cli.py  pyproject.toml  refactor.py  requirements.txt  rewrite_walkthrough.py  update_cli.py
.cursor/: mcp.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
.opencode/commands/: research-analyze.md  research-audit.md  research-compile.md  research-init.md  research-pivot.md  research-route.md  research-scaffold.md  research-status.md
.os_state/: state_ledger.yaml
.research/: config.yaml  mcp_server.py  orchestrator.py  research.py
.research/agents/: 00_core_guardrails.md  00_intent_router.md  01_research_init.md  02_literature_deep.md  03_method_route.md  04_data_scaffold.md  05_execute_analysis.md  06_compile_outputs.md  07_audit_validate.md  08_research_iterate.md  09_literature_pipeline.md  11_methodology_scout.md  12_replication_validator.md  14_intake_interviewer.md  15_generate_preregistration.md
.research/cache/: data_format_manifest.json
.research/cli/: __init__.py  utils.py
.research/core/: checkpoint_manager.py  hooks.py  interceptors.py  model_resolver.py  state_ledger.py  utils.py
.research/domains/: anthropology.yaml  bayesian_default.yaml  climate_science.yaml  computational_biology.yaml  custom_template.yaml  domain_registry.json  ecology.yaml  econometrics.yaml  education.yaml  epidemiology.yaml  finance.yaml  genomics.yaml  law_empirical.yaml  materials_science.yaml  neuroscience.yaml  nlp_computational.yaml  political_science.yaml  psychology.yaml  public_policy.yaml  sociology.yaml  tool_registry.json
.research/schemas/: __init__.py  analysis_schema.py  execution_schema.py  research_map_schema.py  state_schema.py
.research/scripts/: 00_environment_check.py  dag_viewer.py  research_dashboard.py
.research/skills/: SKILL_TEMPLATE.md
.research/workflows/: causal_investigation.yaml  full_publication.yaml  predictive_modeling.yaml  question_evolution.md  quick_exploratory.yaml  systematic_review.yaml
agents/: 00_core_guardrails.md  01_initialize.md  02_route_and_discover.md  03_ingest_and_scaffold.md  04_execute_analysis.md  05_compile_outputs.md  06_audit_and_validate.md  SLASH_COMMANDS.md
data_raw/: README.md
docs/: AI_INTEGRATION.md  AI_NATIVE_WORKFLOWS.md  ARCHITECTURE.md  AUTHORING.md  AUTHORING_TOOLS.md  CHANGELOG.md  CLI_REFERENCE.md  CONTRIBUTING.md  DOCKER_USAGE.md  DOMAINS.md  DOMAIN_HINT_EXAMPLES.md  EXAMPLE_WALKTHROUGH.md  FAQ.md  GETTING_STARTED.md  GUIDE.md  IDE_INTEGRATION.md  INSTALLATION.md  ITERATION.md  ITERATIVE_RESEARCH_GUIDE.md  MCP_CLIENTS.md  MCP_INTEGRATION.md  MCP_TOOLS_REFERENCE.md  MIGRATION_2_0.md  MODEL_SIZE_GUIDE.md  ONBOARDING.md  PROTOCOLS.md  PROTOCOL_DOCTRINE.md  QUICKSTART.md  README.md  RESEARCHER_GUIDE.md  SETUP.md  SETUP_PROMPT.md  SKILLS.md  TOKEN_USAGE_ESTIMATES.md  TOOLS.md  WALKTHROUGH.md  WORKFLOWS.md  WORKSPACE_TAXONOMY.md  system_prompt.txt
docs/architecture/: AI_INTEGRATION.md  ARCHITECTURE.md  GUIDANCE_SYSTEM.md
docs/manuals/: RESEARCHER_GUIDE.md
docs/tutorials/: EXAMPLE_WALKTHROUGH.md  IDE_INTEGRATION.md  QUICKSTART.md
docs_input/: research_brief.md
environment/: README.md  preflight_check.py  requirements.txt  runtime_selector.py  setup.sh  setup_conda.sh
environment/base/: Dockerfile.base  docker-compose.yml
examples/: README.md  hello_world.py
examples/01_literature_review/: run.sh
examples/01_sleep_quality_analysis/: .gitignore  README.md  RESEARCH_OVERVIEW.md
examples/02_data_exploration/: run.sh  sample.csv
examples/02_policy_impact_synthesis/: AGENTS.md  README.md  RESEARCH_OVERVIEW.md  opencode.json
examples/beginner_study/: README.md  run.py
examples/expert_study/: README.md  run.py
inputs/: README.md  intake.json  intake.md  intake.yaml  intake_schema.json
inputs/context/: README.md
inputs/data/: README.md
inputs/papers/: README.md
scripts/: 00_environment_check.py  generate_tool_docs.py  preflight.py  research_runner.py  test_mcp_conformance.py  validate_mcp_schemas.py  validate_protocols.py
src/research_copilot/: __init__.py  chat.py  cli.py  engine.py  intent_router.py  project_ops.py  server.py
src/research_os/: __init__.py  chat.py  cli.py  config.py  engine.py  errors.py  intent_router.py  project_ops.py  server.py
templates/: .continuerules  .windsurfrules  AGENTS.md  CLAUDE.md  mcp_config.json  opencode.json  researcher_config.yaml
templates/configs/: economic_panel.yaml  epidemiology_observational.yaml  genomics.yaml  geospatial.yaml  nlp_benchmark.yaml  psychometric.yaml  qualitative_research.yaml  rct_config.yaml  survival_analysis.yaml  time_series.yaml
tests/: conftest.py  test_actions.py  test_audit.py  test_config.py  test_conversation_dag.py  test_conversational_operator.py  test_core.py  test_dag.py  test_executors.py  test_find_project_root.py  test_init.py  test_memory.py  test_phase10_hierarchy.py  test_phase11_collaboration.py  test_phase12_response_strategy.py  test_phase1_operator.py  test_phase2_semantic_state.py  test_phase3_replanning.py  test_phase4_memory.py  test_phase5_tool_autonomy.py  test_phase6_research_objects.py  test_phase7_interruptions.py  test_phase8_skeptic.py  test_phase9_replay.py  test_protocols.py  test_search.py  test_server.py  test_snapshot.py  test_state.py
tests/integration/: test_all_protocols_load.py  test_full_workflow.py  test_init.py  test_integration.py  test_pipeline.py  test_reorganized_imports.py
tests/tools/: test_all_mcp_tools.py  test_citations.py  test_context_intake.py  test_hypotheses.py  test_intake.py  test_mcp_tools.py  test_notebook.py  test_planning.py  test_preregistration_and_dashboard_tests.py  test_redteam_and_null.py  test_repair.py  test_research.py  (+7 more)
(+777 files in other folders)
