[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-os"
version = "0.1.0"
description = "An MCP-native research operating system for reproducible, citation-verified academic workflows."
readme = "README.md"
authors = [
    {name = "Vibhav", email = "vibhav.setlur@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "pydantic>=2.0",
    "importlib-resources>=5.0; python_version < '3.9'",
]

[project.urls]
Repository = "https://github.com/VibhavSetlur/Research-OS"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
web = ["firecrawl-py", "beautifulsoup4", "tenacity", "trafilatura"]
literature = ["metapub", "semanticscholar"]
viz = ["matplotlib", "seaborn", "plotly", "panel"]
execution = ["docker"]
r = ["rpy2"]
julia = ["julia"]
audit = ["ruff"]
poster = []
ml = ["scikit-learn", "xgboost", "shap"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0"
]
all = ["research-os[web,literature,viz,execution,r,julia,audit,poster]"]

[project.scripts]
research-os = "research_os.cli:main"

[tool.ruff.lint]
per-file-ignores = { "src/research_os/server.py" = ["E402"], "src/research_os/state/state_ledger.py" = ["E402"], "src/research_os/tools/actions/citation_verifier.py" = ["E402"], "src/research_os/utils/executor.py" = ["E402"], "src/research_os/utils/parallel_runner.py" = ["E402"], "src/research_os/utils/skill_indexer.py" = ["E402"] }

[tool.pytest.ini_options]
norecursedirs = ["scratch", "scripts", ".git", "templates"]

[tool.hatch.build.targets.wheel]
packages = ["src/research_os"]
