[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-os"
version = "1.0.0"
description = "An MCP-native research operating system for reproducible, citation-verified academic workflows."
readme = "README.md"
authors = [
    {name = "Vibhav", email = "vibhav.setlur@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["research", "mcp", "model-context-protocol", "reproducible-research", "academic"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

# Core deps: only the bits the server itself needs to boot and serve every
# tool that doesn't require optional system tools. pandas is here because
# tool_data_sample / tool_data_profile are core.
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "requests>=2.28",
    "httpx>=0.25",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pandas>=1.5",
]

[project.urls]
Repository = "https://github.com/VibhavSetlur/Research-OS"
Issues = "https://github.com/VibhavSetlur/Research-OS/issues"

[project.optional-dependencies]
# Per-feature extras. Use [all] for everything except R / Julia / Docker
# system bindings (those need their own runtime).
web = ["firecrawl-py", "beautifulsoup4", "tenacity", "trafilatura"]
literature = ["metapub", "semanticscholar"]
viz = ["matplotlib", "seaborn", "plotly", "Pillow"]
audit = ["statsmodels", "scipy", "Pillow"]
ml = ["scikit-learn", "xgboost", "shap"]
notebook = ["jupyter", "nbconvert"]
execution = ["docker"]
r = ["rpy2"]
julia = ["julia"]

# Developer extras
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.0",
]

# "all" pulls everything CI can install cross-platform. R / Julia / Docker
# need their respective system runtimes and are deliberately excluded.
all = ["research-os[web,literature,viz,audit,ml,notebook]"]

# "ci" is the lean install used by GitHub Actions: enough to lint + preflight
# + run every test (which mocks the heavy bits) WITHOUT pulling shap /
# xgboost / jupyter (slow / large compiled deps that aren't needed for
# the test suite itself). The build job still validates the full wheel.
ci = ["research-os[viz,audit]"]

[project.scripts]
research-os = "research_os.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["scratch", "templates"]

[tool.ruff.lint]
# Default rules (E, F) plus a small extension. Line-length (E501) is not
# enforced because long descriptions in TOOL_DEFINITIONS are intentional.
select = ["E4", "E7", "E9", "F", "W6"]
ignore = [
    "E402",  # module-level import not at top — server.py + state_ledger.py need it
    "F401",  # `unused` imports — covered by # noqa in __init__ re-exports
]

[tool.ruff.lint.per-file-ignores]
"src/research_os/server.py" = ["E402"]
"src/research_os/state/state_ledger.py" = ["E402"]
"tests/**/*.py" = ["F401"]  # tests may import for side-effects (mocking)

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", "templates", "__pycache__", ".venv", "venv"]
addopts = "-q --strict-markers"
markers = [
    "integration: end-to-end tests that may run the CLI in a subprocess (slow)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_os"]
